# apriltag-android

./: CMakeLists.txt
releaseBuild/: README.md
src/androidTest/java/edu/umich/eecs/april/apriltag/: ApplicationTest.java
src/main/apriltag/: apriltag_jni.c
src/main/java/edu/umich/eecs/april/apriltag/: ApriltagDetection.java  DetectionThread.java
src/main/res/values/: strings.xml
